fix - resolve requests in the order they were sent, fix css- overflow of last search items

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 /* selectable-items-list */
 .movie-container__selectable-items-list.ui {
-    white-space: nowrap;
     overflow: auto;
     margin: 30px 0;
     display: flex;
